# fuz_template

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  about.html  docs.html  index.html  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  preapproved.md
.github/workflows/: check.yml
.well-known/: package.json  source.json
_app/: version.json
_app/immutable/assets/: 0.7eJRVIUw.css  0.BHvnCO-o.css  0.BeiDLqHc.css  0.BxLr5S9K.css  0.CQ-09Ao8.css  0.CQ7u-JAr.css  0.CWOH9ZEN.css  0.CbYRi83X.css  0.CsdK8mfh.css  0.DAv74fiG.css  0.DSJvXmjZ.css  0.DgfBAcsV.css  0.DslgAXH9.css  0.WKt72pDL.css  0.wvBFXhaX.css  0.zmwQu04Q.css  2.BdNNXGKK.css  3.A32i4WBA.css  3.B1-0HwA1.css  3.BJLXB3_H.css  3.C26nHZun.css  3.DNGsASy4.css  DocsFooter.9YYN25os.css  constants.DT8ZbEB_.css  logos.C_lYjQf_.css
_app/immutable/chunks/: -9l2U8rt.js  -L4LalWZ.js  -yAwd1hK.js  0BrCufRT.js  0fBNDk69.js  0u64bn7l.js  104RYSGU.js  1NbB4QGN.js  1jq4Zpgy.js  3wvaMVC-.js  4YoUwFPB.js  (+706 more)
crates/app_cli/: Cargo.toml
crates/fuz_template/: Cargo.toml
crates/fuz_template/src/: anchors.rs  apply.rs  check.rs  cli.rs  config.rs  error.rs  features.rs  git.rs  main.rs  plan.rs  templates.rs  wizard.rs
crates/fuz_template/templates/: CLAUDE.md.in  workspace_cargo.toml.in
crates/molt/: Cargo.toml
docs/: api.html  library.html
docs/api/: Mreows.svelte.html  Positioned.svelte.html  molt.ts.html
src/lib/: Mreows.svelte  Positioned.svelte  molt.ts
src/routes/: +layout.svelte  +page.svelte  Mreows.svelte  fuz.css  library.json  library.ts  moss.css  package.gen.ts  package.ts
src/test/: example.test.ts  molt.test.ts
(+474 files in other folders)
