[package]
name = "fuz_template"
description = "molt — transforms this template clone into your own project, then deletes itself"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
thiserror.workspace = true

[lints]
workspace = true
